--- a/item-lister.html
+++ b/item-lister.html
@@ -11,6 +11,14 @@
         <title>Item Lister</title>
     </head>
     <body>
+        <style>
+        #candy {
+            display: block;
+            margin-left: auto;
+            margin-right: auto;
+            width: 100%;
+        }
+        </style>
         <img id="candy" src="candy.avif" style="display:none">
         <header id="main-header" class="bg-success text-white p-4 mb-5">
             <div class="container">
